--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,19 +5,19 @@
 			"name": "Next.js: debug server-side",
 			"type": "node-terminal",
 			"request": "launch",
-			"command": "pnpm run dev"
+			"command": "pnpm run dev",
 		},
 		{
 			"name": "Next.js: debug client-side",
 			"type": "msedge",
 			"request": "launch",
-			"url": "http://localhost:3012"
+			"url": "http://localhost:3000"
 		},
 		{
 			"name": "Next.js: debug full stack",
 			"type": "node",
 			"request": "launch",
-			"program": "${workspaceFolder}/node_modules/.bin/next",
+			"program": "${workspaceFolder}/node_modules/next/dist/bin/next",
 			"runtimeArgs": [
 				"--inspect"
 			],
