--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3012",
+    "dev": "cross-env NODE_OPTIONS='--inspect' next dev -p 3012",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,15 +12,19 @@
     "@lucia-auth/adapter-prisma": "^4.0.1",
     "@prisma/client": "5.13.0",
     "@react-email/components": "0.0.17",
+    "@react-email/render": "^0.0.13",
     "arctic": "^1.8.1",
-    "i": "^0.3.7",
+    "clsx": "^2.1.1",
+    "input-otp": "^1.2.4",
     "lucia": "^3.2.0",
     "mailtrap": "^3.3.0",
     "next": "14.2.3",
     "nodemailer": "^6.9.13",
     "oslo": "^1.2.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.11",
