--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_OPTIONS='--inspect' next dev -p 3012",
+    "dev": "next dev -p 3012",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -14,9 +14,11 @@
     "@react-email/components": "0.0.17",
     "@react-email/render": "^0.0.13",
     "arctic": "^1.8.1",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "input-otp": "^1.2.4",
     "lucia": "^3.2.0",
+    "lucide-react": "^0.378.0",
     "mailtrap": "^3.3.0",
     "next": "14.2.3",
     "nodemailer": "^6.9.13",
@@ -24,7 +26,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.11",
